# fireball

./: CMakeLists.txt  README.md
dependencies/include/: linmath.h
dependencies/include/glad/: glad.h
src/: glad.c  main.cpp
src/common/: shader.cpp  shader.hpp
src/components/: texture.cpp  texture.h
src/renderer/: indexBuffer.cpp  indexBuffer.h  renderer.cpp  renderer.h  shader.cpp  shader.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h  vertexBufferLayout.h
src/res/: bgshader.glsl  death.glsl  playershader.glsl  shader.glsl
src/shaders/: SimpleFragmentShader.glsl
src/utils/: collision.h  coordinates.h  keymaps.h
